@@ -10,16 +10,16 @@ DIST subunit-0.0.8.tar.gz 400157 SHA256 5280c928ccfdcfd1d9b5cbb7d25238060d6d91ac
 DIST subunit-0.0.9.tar.gz 422564 SHA256 284560e29fafe76d571af27f0c42e40f86ed4ab7eab57e23c2039aa3f9c4f474 SHA512 10ab8bbb3e63190e9ead8b027b3f95abd08a74ed71ef20b37d0251898d9ff7c977bcd94cd1aed2da03ab4977401143d1889f7c59db9c021e8d77ab8f33b885f8 WHIRLPOOL be9f4af1d640da02699daac5ba8bbb9296734ea6396e974a560aac83c0a097c6d2ce0480e62f046cbdd0569083a135fb724095187fb0edce31bc2940190bec23
 EBUILD subunit-0.0.10-r1.ebuild 1285 SHA256 9bdea840872541673dd4edcf72bf938aa20ab3ba80150101438c9a568b67c333 SHA512 810b0cbff1808ef661dc19c0d3eb0dfcebc84b2fa4a013a4b68ec4cead850879c4920f161870c6e5e5e0f88337fc6615ee6e4230b447155e254374f52f7256f2 WHIRLPOOL 6ed613d0926641a356926278d1d835b46c0bdf6bf50d041d8b3c5a07409ab4b646fb8343cb3e7042c5933d85cbf8c1867d3c3789818fb1e0f8c781a2d4e6ea57
 EBUILD subunit-0.0.10.ebuild 1218 SHA256 8c206f7822856ea11ac3da4640acc11c0f86f7768d9a476811af99631e4615a7 SHA512 dea53091c96e569722449d105b7c10f9d697a2292073c5faa680311777d32f8897998aa3f5fde7d195238cba95405203f2193ea0e17e0a379dc298f65730547f WHIRLPOOL ef2a2eb84d0a70fd9ad16f3bdf80de71034d9d4c66ed7fe5fabe90055f6b505fe8afd935f7622492d7cda7a0a89c61cdb60bc0bc9f57bed1906d3a7267fbc735
-EBUILD subunit-0.0.15.ebuild 1156 SHA256 fdc7a3100658e0efdc3ab4112812e2c215131e26bc7a9cb3a6faf9254eb38752 SHA512 dd9dba066401264a020393885073cb839946de1d82ae64b270fe1ab89efa595c4598c3c01048b9c82ce6e21a8a0b6cd1cb40b330d7c835fece5c01fa58293463 WHIRLPOOL 1ad6f514d39c3c24c26927b9bf27d95ad6293cf515390a467f93f276f96f8793c2e990a2227c98c9849d74555b8eef7423956ef8b3e58b13f968b2602a9d76cf
+EBUILD subunit-0.0.15.ebuild 1153 SHA256 78f770b3affac8a693beb3df5d04faf25c92e4d2ba45656fb5deaac410e969fc SHA512 6eade82786fc9c9a409323b7d6f19b03949dc7fcc03d55bef1d804032f3645531ffbbb6d6330a4f4a6f35d2012b37b53d822b5915ba4babb4b80490d9554ab2c WHIRLPOOL b9cffa923b593cd24a03236fb27f6da23f188135fcd7b7b51469c6f4ed630ffda66a7ca7c82e71faa66b35c31c5a133ba692da46eabd160e9e37ae26492c7b05
 EBUILD subunit-0.0.6.ebuild 900 SHA256 167446ce120783570169c561406ba37351b761da0fc2b4f03158b76ba23eeb71 SHA512 bd88311667d7456a0a2ded9a523e38a3693c5e07eff7e7c4469a8c9b8b06e636f7d68c9a22bc2f23dbff8294b6e5430cf218c52d5877f853692c106aca52b113 WHIRLPOOL 65dce2e93b7038ddcf9ec544b7f5bba78328d2653ee95deeba79d7bcc0cf16b04976657c2a768db2e85372a3f437eda56a97049319f4d21b30b24403534b2817
 EBUILD subunit-0.0.8.ebuild 1278 SHA256 062ca3cf68d9e499b0ada5c2a79c2749ca330a4d3394a55712bcfe88f76de1f3 SHA512 7921b7dade133d6776eb9f5c685fb173f4883e82e62278f854ebbd966e3bba3a31197dbcd12596f75ba293e8c0d41d3d54c14de3c5474225565dd0cb29a372ac WHIRLPOOL bf220615c26b74afcdf92e1d5850ef9196c4de2ca64ca294f1979fb81be2800feb27012713191da369efcf04e80b36882bc2d1619d4ff92848d5a702f9e46501
 EBUILD subunit-0.0.9.ebuild 1215 SHA256 2462de8d7e9b977a4c361bc4700cf845e531dfb41b9d7dfb8c634c48482865c0 SHA512 f957ecb29614cfd853dc44b5f0a08acaa135c0d546e61687ea3609801faf25260ad125f6c02c0d7ba6b9dbbcc55b47a800c496cddbe235877c1985b646cb5f46 WHIRLPOOL dc4603eb63c0ec8554da19ea5d8d952a49dfe3bc3cf1fc14fd2b5c06822a4efd238315aa0ad8892e2dec3ade5e0ad0bb808992985340562ed1f38f7de89b35ae
-MISC ChangeLog 4320 SHA256 4be378c13a138de861db16cc0145cfa42cfae95fc036e8f4c6b46c5e431a38b1 SHA512 e4d8252df72378c2edaf9790d676dfe68dd47ad5f0e6da55f2aeca21061523d427f94fd91cb6fe564883593790a24b02e1ee23538c0287d0891d020e71c41649 WHIRLPOOL 9f5ed75f2b3dde6cb0f0aaaeaeee1545bc7e82940c32e759c8e2a1c2954368bed54ee2700ee1354c4a7c73da184cd3d5e4b36d5d22073eed086de29aa7e7d914
+MISC ChangeLog 4425 SHA256 a1bab986aa624ad4c284b1170487f4938351c7fa8b5334578b958998a66adb94 SHA512 a3e047fecb65171eb66722986123735cdffc7dbe0db8657ef6a3a26c6819efc0a5a31243d973fd1c395979edf72399ba006f790bc455aa13c84c98ff59b89e86 WHIRLPOOL f8d80f88b29f06ecad6bed43be767a2035d1f9e61416f3a640d882fd808524f20d3a20162c243179e5205dff421c27e114d0985b84474bff316bdffd50057257
 MISC metadata.xml 214 SHA256 98d0eb31b6b097fe81a1f0e0af40f17d4b4c024d57861b935618b4df9f184a64 SHA512 9e55d24c684b01b9973636bef71b2dbbd1d0fb98c388e3ec54309239adee108c411dd871044cf0f8a5b62318b6c95bc449ef2984d141f13d2778d14cad7f3484 WHIRLPOOL 4f2f7a64b6bf835fa086c048f3e7c86d9934431dfa51566e295f5c5079d80af315367e43e281e4199d792eb6d2cc4d8bd57c51960047adbea5a523c2ce00a582
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlKmhY0ACgkQso7CE7gHKw2WfQCg4IV0Iao+zOawVBshUr8PS59B
-z4oAoLl1E5lKaN7tZFPOQnFSnERiQeLW
-=wHsy
+iEYEAREIAAYFAlKmm0cACgkQso7CE7gHKw2DOQCg3o3wab7UgpZeN3kqwu+BcF3g
+zVEAoKZPKpGaGUPlL1oXm4do29h2yWlj
+=CyPP
 -----END PGP SIGNATURE-----
