@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install unpack
+DEPEND=kerberos? ( net-libs/libgssglue ) app-arch/xz-utils virtual/pkgconfig
+DESCRIPTION=Transport Independent RPC library (SunRPC replacement)
+EAPI=4
+HOMEPAGE=http://libtirpc.sourceforge.net/
+IUSE=ipv6 kerberos static-libs
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=kerberos? ( net-libs/libgssglue )
+SLOT=0
+SRC_URI=mirror://sourceforge/libtirpc/libtirpc-0.2.4.tar.bz2 mirror://gentoo/libtirpc-glibc-nfs.tar.xz
+_eclasses_=multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953
+_md5_=b4bfafc36723ca962a2b80047f0a8ac6
