@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/libtirpc
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libtirpc/ChangeLog,v 1.30 2013/02/18 21:56:35 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libtirpc/ChangeLog,v 1.31 2013/12/10 06:40:12 vapier Exp $
+
+*libtirpc-0.2.4 (10 Dec 2013)
+
+  10 Dec 2013; Mike Frysinger <vapier@gentoo.org> +libtirpc-0.2.4.ebuild:
+  Version bump.
 
 *libtirpc-0.2.3 (18 Feb 2013)
 
