@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/subunit
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/subunit/ChangeLog,v 1.33 2013/12/10 03:07:35 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/subunit/ChangeLog,v 1.34 2013/12/10 04:40:31 idella4 Exp $
+
+  10 Dec 2013; Ian Delaney <idella4@gentoo.org> subunit-0.0.15.ebuild:
+  reverted to python-r1, for now
 
   10 Dec 2013; Ian Delaney <idella4@gentoo.org> metadata.xml,
   subunit-0.0.15.ebuild:
